30_applications/http/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http
  labels:
    gateway.networking.k8s.io/public-routes: "true"
