30_applications/http/rssreader_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rssreader-server
  namespace: http
  labels:
    app.kubernetes.io/name: "rssreader"
    app.kubernetes.io/instance: "rssreader"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "rssreader"
      app.kubernetes.io/instance: "rssreader"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "rssreader"
        app.kubernetes.io/instance: "rssreader"
        app.kubernetes.io/component: "server"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rssreader
          image: docker.io/jmehler/rss-reader:0.0.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "250Mi"
              cpu: "25m"
            limits:
              memory: "300Mi"
              cpu: "50m"
