30_applications/http/mapmaker_client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapmaker-client
  namespace: http
  labels:
    app.kubernetes.io/instance: mapmaker
    app.kubernetes.io/name: client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: mapmaker
    app.kubernetes.io/name: client
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
