30_applications/http/rssreader_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rssreader-server
  namespace: http
  labels:
    app.kubernetes.io/name: rssreader
    app.kubernetes.io/instance: rssreader
    app.kubernetes.io/component: server
spec:
  parentRefs:
    - name: public
      namespace: ingress
      sectionName: https-root
  hostnames:
    - "${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jmehler/rss
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Prefix
                value: /jmehler/rss
      backendRefs:
        - group: ""
          kind: Service
          name: rssreader-server
          port: 80
